<resources>
    <string name="app_name">myCrd</string>
    <string name="your_network_in_one_place">Your network in one place</string>
    <string name="a_quick_taste_of_what_s_in_store_for_you">A quick taste of what’s in store for you.</string>
    <string name="set_up_your_personal_card">Set up your personal card</string>
    <string name="capture_your_physical_card">Capture your physical card</string>
    <string name="add_manually">Add manually</string>
    <string name="import_card">Import card</string>
    <string name="edit">Edit</string>
    <string name="lastly_set_up_your_account">Lastly, set up your account</string>
    <string name="keep_all_your_cards_in_one_place">Keep all your cards in one place</string>
    <string name="continue_btn">Continue</string>
    <string name="create_card">Create card</string>
    <string name="use_new_credentials">Use new credentials</string>
    <string name="use_my_card_information">Use my card information</string>
    <string name="camera_rationale">"We need access to your camera to take photos"</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="note">Note</string>
    <string name="phone">Phone</string>
    <string name="social_media">Social Media</string>
    <string name="work">Work</string>
    <string name="work_location">Work Location</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="enter_the_one_time_pin_that_was_sent_to_your_number">Enter the one-time pin that was sent to your number %1$s</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="me">Me</string>
    <string name="let_s_get_something_going_here">Let\'s get something going here</string>
    <string name="start_adding_some_cards">Start adding some cards</string>
    <string name="personal_info">Personal Info</string>
    <string name="prefix">Prefix</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="suffix">Suffix</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="other">Other</string>
    <string name="personal">Personal</string>
    <string name="add_a_profile">Add a profile</string>
    <string name="add_another_profile">Add another profile</string>
    <string name="add_another_field">Add another field</string>
    <string name="next">Next</string>
    <string name="_1_of_2">1 of 2</string>
    <string name="_2_of_2">2 of 2</string>
    <string name="username_or_url">Username or url</string>
    <string name="done">Done</string>
    <string name="socials">Socials</string>
    <string name="work_or_company">Work or Company</string>
    <string name="work_info">Work Info</string>
    <string name="company_name">Company name</string>
    <string name="role_or_job_title">Role or Job title</string>
    <string name="address">Address</string>
    <string name="continue_string">Continue</string>
    <string name="the_image_uploaded_here_will_be_the_cover_of_this_card">The image uploaded here will be the cover of this card</string>
    <string name="share">Share</string>
    <string name="options">Options</string>
    <string name="delete_card">Delete card</string>
    <string name="delete_card_title">Delete Card</string>
    <string name="view_card_qr">View card QR</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="edit_card">Edit card</string>
    <string name="export_to_contacts">Export to Contacts</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete_this_card">Are you sure you want to delete this card?</string>
    <string name="mail">Mail</string>
    <string name="location">Location</string>
    <string name="search_for_card">Search for card</string>
    <string name="sort_by">Sort by</string>
    <string name="recently_added">Recently added</string>
    <string name="all_chip">All</string>
    <string name="name_chip">Name</string>
    <string name="company_chip">Company</string>
    <string name="role_chip">Role</string>
    <string name="oops_seems_to_not_be_in_the_mix">Oops! Seems to not be in the mix</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="too_many_tries">Too many attempts. Please try again in a few minutes</string>
    <string name="default_error">Something went wrong</string>
    <string name="enter_valid_number">Enter a valid mobile phone number</string>
    <string name="card_not_found">Card not found</string>
    <string name="cards_not_found">No cards found</string>
    <string name="failed">operation failed</string>
    <string name="success">Operation successful</string>
    <string name="add_a_note">Add a note</string>
    <string name="require_gallery">myCrd requires access to your gallery to upload a photo</string>
    <string name="require_camera">myCrd requires access to your camera to upload a photo</string>
    <string name="adding_card">Adding Card</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="confirm_your_number">Confirm your number</string>
    <string name="is_1_s_the_number_you_want_to_sign_up_with">Is <b>%1$s</b> the number you want to continue with?</string>
    <string name="go_back">Go back</string>
    <string name="yes">Yes</string>
    <string name="add_personal_card">Add personal card</string>
    <string name="add_a_personal_card">Add a personal card</string>
    <string name="add_a_card">Add a card</string>
    <string name="settings">Settings</string>
    <string name="create_one">Create one</string>
    <string name="mobile_number">Mobile number</string>
    <string name="log_out">Log out</string>
    <string name="update_your_display_name">Update your display name</string>
    <string name="save">Save</string>
    <string name="change_your_phone_number">Change your phone number</string>
    <string name="a_one_time_pin_will_be_sent_to_your_number_to_verify_that_you_are_requesting_for_the_change">A one-time pin will be sent to your number to verify that you are requesting for the change.</string>
    <string name="update_your_number">Update your number</string>
    <string name="verify_your_new_number">Verify your new number</string>
    <string name="fab">fab</string>
    <string name="your_personal_cards_to_distribute">Your personal cards to distribute</string>
    <string name="type_something">Type something</string>
    <string name="add_card">add card</string>
    <string name="my_network">My Network</string>
    <string name="okay">Okay</string>
    <string name="no_email_specified_for_this_card_add_and_try_again">No email address added for this card. Add one and try again</string>
    <string name="no_phone_specified_for_this_card_add_and_try_again">No phone number added for this card. Add one and try again</string>
    <string name="no_location_specified_for_this_card_add_and_try_again">No work location added for this card. Add one and try again</string>
    <string name="select_email_address">Select email address</string>
    <string name="select_phone_number">Select phone number</string>
    <string name="update_photo">Update photo</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="remove_photo">Remove photo</string>
    <string name="share_as_vcard">Share as vcard</string>
    <string name="share_card_error">Sorry! Your card couldn’t be shared</string>
    <string name="could_not_process_image">Could not process image</string>
    <string name="take_a_photo_of_the_card">Take a photo of the card</string>
    <string name="scan_physical_card">Scan physical\ncard</string>
    <string name="add_card_manually">Add card\nmanually</string>
    <string name="crop_the_photo_to_card_edges">Crop the photo to card edges</string>
    <string name="add_label">Add label</string>
    <string name="website">Website</string>
    <string name="labelled">Labelled</string>
    <string name="unlabelled">Unlabelled</string>
    <string name="add_detail">Add detail</string>
    <string name="you_haven_t_assigned_a_label_to_any_detail_yet_labelled_details_will_show_here">You haven’t assigned a label to any detail yet. Labelled details will show here.</string>
    <string name="there_are_no_details_to_assign_labels_to">There are no details to assign labels to.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="assign_a_label">Assign a label</string>
    <string name="email_address">Email address</string>
    <string name="role">Role</string>
    <string name="change_label">Change label</string>
    <string name="remove_label">Remove label</string>
    <string name="type_here">Type here</string>
    <string name="edit_detail">Edit detail</string>
    <string name="label_with_type">%1$s • %2$s</string>
    <string name="i_ll_do_this_later">I\'ll do this later</string>
    <string name="label_details">Label Details</string>
    <string name="copy">Copy</string>
    <string name="assign_label">Assign label</string>
    <string name="okay_got_it">Okay, got it</string>
    <string name="hold_card_close_to_phone_s_camera_to_improve_scan_accuracy">Hold card close to phone’s camera to improve scan accuracy</string>
    <string name="image_to_be_scanned">image to be scanned</string>
    <string name="crop_rotate">Crop/Rotate</string>
    <string name="social_media_icon">social media icon</string>
    <string name="handle">handle</string>
    <string name="share_button">share button</string>
    <string name="qr_image">qr image</string>
    <string name="header_logo">header logo</string>
    <string name="arrow">arrow</string>
    <string name="logo">logo</string>
    <string name="go_to_scan">go to scan</string>
    <string name="hand_card_illustration">hand card illustration</string>
    <string name="illustration">illustration</string>
    <string name="skip">skip</string>
    <string name="info_icon">info icon</string>
    <string name="camera_icon">camera icon</string>
    <string name="capture_card_image">capture card image</string>
    <string name="scan_card">scan card</string>
    <string name="enter_manually">enter manually</string>
    <string name="viewfinder_corner">viewfinder corner</string>
    <string name="remove">remove</string>
    <string name="profile_photo">profile photo</string>
    <string name="confirm">confirm</string>
    <string name="rotate">rotate</string>
    <string name="no_content">no content</string>
    <string name="add_phone">add phone</string>
    <string name="add_email">add email</string>
    <string name="user_photo">user photo</string>
    <string name="make_call">make call</string>
    <string name="show_location">show location</string>
    <string name="send_mail">send mail</string>
    <string name="enter_your_name_to_complete_your_profile">Enter your name to complete your profile</string>
    <string name="your_image_could_not_be_saved">Your image could not be saved</string>
    <string name="kindly_set_up_a_default_email_app">Kindly set up a default email app</string>
    <plurals name="cards">
        <item quantity="one">%d card</item>
        <item quantity="zero">No cards yet</item>
        <item quantity="other">%d cards</item>
    </plurals>
</resources>