<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.codedevtech.mycardv2.viewmodel.OnboardingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.onboarding.CardOptionsFragment">

        <TextView
            android:id="@+id/edit"
            style="@style/TextAppearance.MyCardStyles.Body.Semibold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/delete_card_title"
            app:layout_constraintBottom_toTopOf="@+id/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/add"
            style="@style/TextAppearance.MyCardStyles.Body.Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:text="@string/are_you_sure_you_want_to_delete_this_card"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            style="@style/Widget.MyCardStyles.Button.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/delete"
            android:textColor="@color/mc_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/Widget.MyCardStyles.Button.Dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/delete"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintTop_toTopOf="@+id/delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>